line height spacing for mobile fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,7 +389,7 @@ a {
   color: rgba(0, 0, 0, 0.7); }
   .u-primaryHeader.u-primaryHeader--for-index {
     font-size: 1.414em;
-    line-height: 1.41443;
+    line-height: 1.17869;
     font-weight: 600; }
 
 .u-subHeader {
